--- a/apps/scss/_globals.scss
+++ b/apps/scss/_globals.scss
@@ -5,3 +5,90 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: hsl(155, 45%, 50%);
+}
+.wrapper{
+    width: 605px;
+    background: white;
+    border-radius: 15px;
+    padding: 30px 30px 25px;
+
+    header{
+        font-size: 35px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .content{
+        margin: 35px 0;
+
+        .author{
+            display: flex; 
+            font-size: 18px;
+            font-style: italic;
+            margin-top: 20px;
+            justify-content: flex-end;
+
+            span:first-child{
+                margin: -7px 5px 0 0;
+                font-family: monospace;
+            }
+        }
+    }
+
+    .qoute-area{
+        display: flex;
+        justify-content: center;
+
+        i{
+            font-size: 15px;
+        }
+
+        i:first-child{
+            margin: 3px 10px 0 0;
+        }
+        i:last-child{
+            display: flex;
+            align-items: flex-end;
+            margin: 0 0 3px 10px;
+        }
+
+        .qoute{
+            font-size: 22px;
+            text-align: center;
+            word-break: break-all;
+        }
+    }
+    .buttons{
+        border-top: 1px solid #ccc;
+
+        .features{
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+            justify-content: space-between;
+
+            ul{
+                display: flex;
+
+                li{
+                    list-style: none;
+                    margin: 0 5px;
+                    height: 47px;
+                    width: 47px;
+                    display: flex;
+                    color: hsl(155, 45%, 50%);
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+                    border: 2px solid hsl(155, 45%, 50%);
+                }
+            }
+        }
+    }
+}
