added speech synthesis

--- a/apps/scss/_globals.scss
+++ b/apps/scss/_globals.scss
@@ -58,7 +58,7 @@ body{
             margin: 0 0 3px 10px;
         }
 
-        .qoute{
+        .quote{
             font-size: 22px;
             text-align: center;
             word-break: break-all;
