--- a/apps/scss/styles.css
+++ b/apps/scss/styles.css
@@ -82,7 +82,7 @@ body {
   margin: 0 0 3px 10px;
 }
 
-.wrapper .qoute-area .qoute {
+.wrapper .qoute-area .quote {
   font-size: 22px;
   text-align: center;
   word-break: break-all;
